
2012-09-11  ChunEon Park (Hermet)

        * Even if the top item is inserted into the naviframe. Any transition
          wouldn't be launched.

2012-09-12  Jaehwan Kim

        * When the number of item is changed, the toolbar emits the signal
          to theme. The theme can be changed something according the number
          of item.

2012-09-12  Shinwoo Kim (kimcinoo)

        * Add access features to calendar.
        * Add icon show/hide handling to diskselector ala button etc.

2012-09-12  Thiep Ha

        * Fix ctxpopup direction if -1 is uses as priority.

2012-09-12  Jiyoun Park (jypark)

        * Add image deleted signal into plug. it help user notice socket service
          fail and they can retry service connection. 
        * Add test code deal with this signal. 

2012-09-12  Davide Andreoli (davemds)

        * Add external property "play length" to Video widget, read-only.

2012-09-13  M.V.K. Sumanth

        * Fix diskselector when bounce off and round enabled.

2012-09-12  Flavio Ceolin

        * Add elementary_codegen - tool that genereates code to working with
          edje files. Given an edje file and a group, it searchs for SWALLOW
          parts and programs and generates a source/header with the helpers
          for the follow functions:

            - elm_layout_signal_callback_del
            - elm_layout_signal_callback_add
            - elm_layout_signal_emit
            - elm_layout_content_get
            - elm_layout_content_set
            - elm_layout_content_unset
            - elm_layout_text_get
            - elm_layout_text_set
            - elm_layout_theme_set

2012-09-14  Doyoun Kang

        * Add APIs for floating mode
          - elm_win_floating_mode_set
          - elm_win_floating_mode_get

2012-09-14  Shinwoo Kim (kimcinoo)

        * Fix info field set for bubble widget.

2012-09-17  Shinwoo Kim (kimcinoo)

        * Add direction enum to elm access activate api
        * Use activate directions
